# rusty-tools

./: README.md
.cursor/rules/: rust-expert-rule.mdc
MeetupStuff/: README.md  how_small.md  pesentation_snippet.md  what_project.md
anagram_transform/: Cargo.toml  README.md
anagram_transform/src/: main.rs
apply_edit_to_all/: Cargo.toml
apply_edit_to_all/src/: main.rs
aziactixtest/: Cargo.toml
aziactixtest/src/: main.rs
choose_some/: Cargo.toml
choose_some/src/: main.rs
cleanscreenshots/: Cargo.toml
cleanscreenshots/src/: main.rs
color_converter/: Cargo.toml
color_converter/src/: main.rs
color_mean/: Cargo.toml  README.md
color_mean/src/: main.rs
cpal_testing/: Cargo.toml
cpal_testing/src/: main.rs  notes.rs
find_domain_type/: Cargo.toml
find_domain_type/src/: main.rs
find_unique/: Cargo.toml
find_unique/src/: main.rs
html_encoder/: Cargo.toml  README.md
html_encoder/src/: main.rs
json_prettify/: Cargo.toml  output.json
markdown_to_pdf/: Cargo.toml
median_finder/: Cargo.toml
open_urls_from_list/: Cargo.toml  README.md
read_env_vars/: Cargo.toml
release_semaphore/: Cargo.toml
release_semaphore/src/: main.rs
select_matching_lines/: Cargo.toml  README.md
serptester/: Cargo.toml  README.md
set_operation/: Cargo.toml  README.md
show_me_os/: Cargo.toml
simple_todo/: Cargo.toml  README.md
speed_conversion/: Cargo.toml  README.md
summary_update/: Cargo.toml  README.md
team_update/: Cargo.toml  README.md
woa_blog_updater/: Cargo.toml
woa_logo_maker/: Cargo.toml
wropen/: Cargo.toml  README.md
(+16 files in other folders)
