[package]
name = "release_semaphore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
clipboard = "0.5.0"
serde = { version = "1.0.203",  features = ["derive"] }
serde_json = {version = "1.0.117"}